--- a/edichokey-ex.tex
+++ b/edichokey-ex.tex
@@ -17,7 +17,19 @@
 %   - the style file: [edichokey.sty];
 %   - the manual files: [edichokey-doc-en.tex, edichokey-doc-en.pdf, README.md];
 %   - the example files: [edichokey-ex.tex, edichokey-ex.pdf].
-%%
+%
+%% Note: the key used in this file is credited to Dale W. McNeal Jr. 
+%% and T. D. Jacobson, from Flora of North America edited by Flora of 
+%% North America Editorial Committee, which is reusable under the terms 
+%% of CC BY license. See the text for full citation.
+%% Their original work is available in
+%%   http://beta.floranorthamerica.org/Allium
+%% or in
+%%   http://www.efloras.org/florataxon.aspx?flora_id=1&taxon_id=101086
+%% and the full content of the CC BY license is in
+%%   https://creativecommons.org/licenses/by/3.0/
+%% In this file, the two basic branches in the key were exchanged. 
+%% See the manual  edichokey-doc-en.tex  for details of modification.
 
 \documentclass[a4paper]{article}
 
