--- a/edichokey-ex.tex
+++ b/edichokey-ex.tex
@@ -34,7 +34,7 @@
 \documentclass[a4paper]{article}
 
 \usepackage[margin=25mm]{geometry}
-\usepackage{edichokey}
+\usepackage[hyperref]{edichokey}
 
 \def\var{\textup{var.} }
 \frenchspacing
