--- a/edichokey-doc-en.tex
+++ b/edichokey-doc-en.tex
@@ -127,16 +127,15 @@ Here a simple demo is presented, showing how to use the package \pkgname{edichok
 
 A larger example key containing 107 \textit{Allium} species is provided separatedly in the package as file \texttt{edichokey-ex.tex}, which was taken almost verbatim from \textit{Flora of North America} (see the file for full citation; reusable under CC BY license\footnote{Re-use terms of FNA: \url{http://beta.floranorthamerica.org/Copyright}.}), except that the two branches at the base (led by alternatives with number 1) were exchanged (but its meaning stayed the same). This example, in the given order, cannot be constructed with \pkgname{dichokey}. 
 
-A package option named $hyperref$ is provided to make the output key easier to use on electronic devices (type $\string\usepackage[hyperref]\{edichokey\}$ instead). When this option is loaded, every alternative will link to its conjugate one by clicking the number, however, the source needs to be compiled twice.
+The package option $hyperref$ (type $\string\usepackage[hyperref]\{edichokey\}$ instead of $\string\usepackage\{edichokey\}$) can make the output key in PDF file easier to use on electronic devices: conjugated alternatives in a key will be hyperlinked to each other, so a reader can jump quickly by clicking their numbers. However, to apply this feature, the source file is required to be compiled twice.
 
 Apart from the mentioned modifications, \pkgname{edichokey} behaves differently from \pkgname{dichokey} in two more aspects: 
 {\parskip-5pt 
 \begin{itemize}
-	\parskip0pt\itemsep2pt
+	\parskip0pt\itemsep0pt
 	\item Dots connecting an alternative and a taxon can be wrapped into two lines;
 	\item All alternatives (maybe with following dots) are wrapped at $\string\righttaxonskip$ length (by default $2em$) from the right margin, leaving only the keyed out taxa reaching the true right boundary.
 \end{itemize}}
-
 
 \section{Change history}
 
